--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,12 +1,12 @@
-.main-nav__toggle{
+.main-nav__toggle {
   width: 25px;
   height: 19px;
   border: none;
-  background: url(../../img/icon-mobile-menu.svg);
+  background: url("../../img/icon-mobile-menu.svg");
 }
 
-.main-nav__toggle--active{
+.main-nav__toggle--active {
   width: 19px;
   height: 19px;
-  background: url(../../img/icon-close.svg);
+  background: url("../../img/icon-close.svg");
 }
