--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -36,19 +36,19 @@ img {
 @import "blocks/banner.scss";
 @import "blocks/сategories.scss";
 @import "blocks/about-feed.scss";
-@import "blocks/result.scss";
+/* @import "blocks/result.scss"; */
 @import "blocks/contacts.scss";
 @import "blocks/catalog.scss";
 @import "blocks/product-list.scss";
 @import "blocks/product.scss";
 @import "blocks/feed-stats.scss";
-@import "blocks/аdditional-catalog.scss";
+/* @import "blocks/аdditional-catalog.scss";
 @import "blocks/аdditional-list.scss";
 @import "blocks/аdditional-product.scss";
 @import "blocks/cost.scss";
 @import "blocks/special.scss";
 @import "blocks/program.scss";
-@import "blocks/form.scss";
+@import "blocks/form.scss"; */
 @import "blocks/footer-links.scss";
 @import "blocks/social.scss";
 @import "blocks/company-link.scss";
