--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -16,6 +16,12 @@
   line-height: 20px;
   font-weight: 400;
   text-transform: uppercase;
+
+  &--last {
+    max-width: 100%;
+    margin-bottom: 11px;
+    text-align: center;
+  }
 }
 
 .product__ico {
@@ -23,12 +29,6 @@
   height: 31px;
   margin-top: 1px;
   margin-bottom: 25px;
-  text-align: center;
-}
-
-.product__feed-title--last {
-  max-width: 100%;
-  margin-bottom: 11px;
   text-align: center;
 }
 
