fix colors, fonts and add global.scss

--- a/source/sass/blocks/company-link.scss
+++ b/source/sass/blocks/company-link.scss
@@ -1,5 +1,9 @@
+.company-link {
+  padding-top: 22px;
+}
+
 .company-link__ico {
   width: 27px;
   height: 34px;
-  background-color: #000000;
+  background-color: $black;
 }
