--- a/source/sass/vars.scss
+++ b/source/sass/vars.scss
@@ -1,1 +1,9 @@
+$main-font: "Oswald", "Helvetica", sans-serif;
+$arial: "Arial", "Tahoma", sans-serif;
 $main-color: #68b738;
+$black: #000000;
+$white: #ffffff;
+$gray--lighter: #e6e6e6;
+$gray--light: #f2f2f2;
+$gray: #cccccc;
+$gray--dark: #444444;
