--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -2,11 +2,11 @@
   width: 25px;
   height: 19px;
   border: none;
-  background: url("../../img/icon-mobile-menu.svg");
+  background: url("../img/icon-mobile-menu.svg");
 
   &--active {
     width: 19px;
     height: 19px;
-    background: url("../../img/icon-close.svg");
+    background: url("../img/icon-close.svg");
   }
 }
