--- a/source/sass/blocks/main-text.scss
+++ b/source/sass/blocks/main-text.scss
@@ -1,6 +1,6 @@
 .main-text {
   margin-top: 0;
   margin-bottom: 0;
-  font-family: "Arial", sans-serif;
-  color: #444444;
+  font-family: $arial;
+  color: $gray--dark;
 }
