--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,30 +1,8 @@
+@import "normalize.scss";
 @import "fonts.scss";
 @import "vars.scss";
 @import "mixins.scss";
-
-html {
-  box-sizing: border-box;
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
-
-body {
-  min-width: 320px;
-  font-family: "Oswald", sans-serif;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 18px;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
-}
-
+@import "global.scss";
 @import "blocks/container.scss";
 @import "blocks/visually-hidden.scss";
 @import "blocks/main-btn.scss";
