--- a/source/sass/vars.scss
+++ b/source/sass/vars.scss
@@ -1,5 +1,5 @@
-$main-font: "Oswald", "Helvetica", sans-serif;
-$arial: "Arial", "Tahoma", sans-serif;
+$main-font: "Oswald", "Tahoma", sans-serif;
+$arial: "Arial", sans-serif;
 $main-color: #68b738;
 $black: #000000;
 $white: #ffffff;
@@ -7,3 +7,13 @@ $gray--lighter: #e6e6e6;
 $gray--light: #f2f2f2;
 $gray: #cccccc;
 $gray--dark: #444444;
+$border-color--lighter: $gray--lighter;
+$border-color--light: $gray--light;
+$border-color: $gray;
+$text-color: $gray--dark;
+$text-color--light-side: $black;
+$text-color--dark-side: $white;
+$background-color: $gray--light;
+$background-color--clean: $white;
+$background-color--green-image: $main-color;
+$btn-color: $main-color;
