--- a/source/sass/blocks/banner.scss
+++ b/source/sass/blocks/banner.scss
@@ -9,12 +9,12 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-color: $main-color;
+  background-color: $background-color--green-image;
 }
 
 .banner__title {
   font-size: 36px;
-  color: $white;
+  color: $text-color--light-side;
   font-weight: 500;
   line-height: 36px;
   text-align: center;
@@ -22,7 +22,7 @@
 
 .banner__slogan {
   line-height: 14px;
-  color: $white;
+  color: $text-color--light-side;
   text-align: center;
   text-transform: uppercase;
 }
