--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,8 +1,8 @@
 .contacts {
-  background-color: $white;
+  background-color: $background-color--clean;
 
   &--gray {
-    background-color: $gray--light;
+    background-color: $background-color;
   }
 }
 
@@ -16,7 +16,7 @@
   margin-bottom: 0;
   font-size: 16px;
   line-height: 20px;
-  color: $black;
+  color: $text-color--light-side;
   text-transform: uppercase;
 }
 
