--- a/source/sass/blocks/footer-links.scss
+++ b/source/sass/blocks/footer-links.scss
@@ -1,7 +1,7 @@
 .footer-links {
   padding-top: 39px;
   padding-bottom: 22px;
-  background-color: $gray--light;
+  background-color: $background-color;
 }
 
 .footer-links__logo {
