--- a/source/sass/blocks/product-list.scss
+++ b/source/sass/blocks/product-list.scss
@@ -5,9 +5,9 @@
 .product-list__item {
   padding-top: 25px;
   padding-bottom: 25px;
-  border-top: 1px solid $gray--light;
+  border-top: 1px solid $border-color--light;
 
   &:last-child {
-    border-bottom: 1px solid $gray--light;
+    border-bottom: 1px solid $border-color--light;
   }
 }
