--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -9,7 +9,7 @@
 .social__item {
   width: 25px;
   height: 25px;
-  background-color: $black;
+  background-color: $text-color--light-side;
 }
 
 .social__ico {
