start css part-2

--- a/source/sass/blocks/banner.scss
+++ b/source/sass/blocks/banner.scss
@@ -14,7 +14,7 @@
 
 .banner__title {
   font-size: 36px;
-  color: $text-color--light-side;
+  color: $text-color--dark-side;
   font-weight: 500;
   line-height: 36px;
   text-align: center;
@@ -22,7 +22,7 @@
 
 .banner__slogan {
   line-height: 14px;
-  color: $text-color--light-side;
+  color: $text-color--dark-side;
   text-align: center;
   text-transform: uppercase;
 }
