--- a/source/sass/blocks/main-btn.scss
+++ b/source/sass/blocks/main-btn.scss
@@ -6,7 +6,7 @@
   text-decoration: none;
   text-align: center;
   text-transform: uppercase;
-  color: $text-color--light-side;
+  color: $text-color--dark-side;
   background-color: $btn-color;
 
   &--gray {
