--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -4,7 +4,7 @@
 
 .site-list__item {
   padding: 24px 0;
-  border-top: 1px solid $border-color--lighter;
+  border-top: 1px solid $border-color--light;
   font-size: 20px;
   line-height: 20px;
   font-weight: 500;
