--- a/source/sass/blocks/сategories.scss
+++ b/source/sass/blocks/сategories.scss
@@ -34,7 +34,7 @@
 .categories__link {
   display: block;
   padding-top: 20px;
-  border-top: 1px solid $border-color;
+  border-top: 1px solid $border-color--dark;
   font-size: 16px;
   line-height: 16px;
   text-transform: uppercase;
