--- a/source/sass/vars.scss
+++ b/source/sass/vars.scss
@@ -3,17 +3,19 @@ $arial: "Arial", sans-serif;
 $main-color: #68b738;
 $black: #000000;
 $white: #ffffff;
-$gray--lighter: #e6e6e6;
-$gray--light: #f2f2f2;
-$gray: #cccccc;
-$gray--dark: #444444;
-$border-color--lighter: $gray--lighter;
+$gray--lighter: #f2f2f2;
+$gray--light: #ededed;
+$gray: #e6e6e6;
+$gray--dark: #cccccc;
+$gray--darken: #444444;
 $border-color--light: $gray--light;
+$border-color--lighter: $gray--lighter;
 $border-color: $gray;
-$text-color: $gray--dark;
+$border-color--dark: $gray--dark;
+$text-color: $gray--darken;
 $text-color--light-side: $black;
 $text-color--dark-side: $white;
-$background-color: $gray--light;
+$background-color: $gray--lighter;
 $background-color--clean: $white;
 $background-color--green-image: $main-color;
 $btn-color: $main-color;
