--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -5,3 +5,30 @@
 .catalog__title {
   margin-bottom: 35px;
 }
+
+@media (min-width: $tablet-width) {
+  .catalog {
+    padding-top: 58px;
+    padding-bottom: 35px;
+  }
+
+  .catalog__wrapper {
+    max-width: 768px;
+    padding-right: 30px;
+    padding-left: 30px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+
+  .catalog__title {
+    margin-bottom: 16px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .catalog__wrapper {
+    max-width: 1300px;
+    padding-right: 40px;
+    padding-left: 40px;
+  }
+}
