--- a/source/sass/blocks/container.scss
+++ b/source/sass/blocks/container.scss
@@ -5,3 +5,19 @@
   padding-right: 20px;
   padding-left: 20px;
 }
+
+@media (min-width: $tablet-width) {
+  .container {
+    max-width: 768px;
+    padding-right: 30px;
+    padding-left: 30px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .container {
+    max-width: 1300px;
+    padding-right: 40px;
+    padding-left: 40px;
+  }
+}
