--- a/source/sass/blocks/main-title.scss
+++ b/source/sass/blocks/main-title.scss
@@ -2,5 +2,12 @@
   margin: 0;
   font-size: 36px;
   line-height: 60px;
-  font-weight: 500;
+  font-weight: 400;
+}
+
+@media (min-width: $tablet-width) {
+  .main-title {
+    font-size: 60px;
+    line-height: 60px;
+  }
 }
