--- a/source/sass/blocks/product-list.scss
+++ b/source/sass/blocks/product-list.scss
@@ -11,3 +11,36 @@
     border-bottom: 1px solid $border-color--lighter;
   }
 }
+
+@media (min-width: $tablet-width) {
+  .product-list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .product-list__item {
+    padding-top: 0;
+    padding-bottom: 0;
+    margin-top: 140px;
+    margin-right: 51px;
+    border: none;
+
+    &:nth-of-type(2n) {
+      margin-right: 0;
+    }
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .product-list__item {
+    margin-right: 59px;
+
+    &:nth-of-type(2n) {
+      margin-right: 59px;
+    }
+
+    &:nth-of-type(4n) {
+      margin-right: 0;
+    }
+  }
+}
