--- a/source/sass/blocks/сategories.scss
+++ b/source/sass/blocks/сategories.scss
@@ -29,6 +29,10 @@
 .categories__text {
   max-width: 230px;
   margin-bottom: 23px;
+
+  &:last-of-type br {
+    display: none;
+  }
 }
 
 .categories__link {
@@ -40,4 +44,88 @@
   text-transform: uppercase;
   color: $text-color--light-side;
   text-decoration: none;
+}
+
+@media (min-width: $tablet-width) {
+  .сategories {
+    padding-top: 0;
+    padding-bottom: 25px;
+  }
+
+  .categories__item {
+    padding-top: 81px;
+    padding-bottom: 62px;
+    padding-left: 52px;
+
+    + .categories__item {
+      margin-top: 30px;
+    }
+  }
+
+  .categories__title {
+    padding-left: 0;
+    margin-bottom: 26px;
+    font-size: 36px;
+    line-height: 37px;
+  }
+
+  .categories__text {
+    max-width: 372px;
+    margin-bottom: 61px;
+
+    &:last-of-type br {
+      display: block;
+    }
+  }
+
+  .categories__link {
+    padding-top: 0;
+    border: none;
+    font-size: 20px;
+    line-height: 20px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .сategories {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+
+  .сategories__list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .categories__item {
+    min-width: 570px;
+    min-height: 372px;
+    margin-right: 80px;
+
+    + .categories__item {
+      margin-top: 0;
+    }
+
+    &:nth-of-type(2n) {
+      margin-right: 0;
+    }
+
+    &:not(:nth-of-type(1)):not(:nth-of-type(2)) {
+      margin-top: 80px;
+    }
+  }
+
+  .categories__title {
+    padding-left: 184px;
+    margin-bottom: 80px;
+  }
+
+  .categories__text {
+    max-width: 462px;
+    margin-bottom: 36px;
+
+    &:last-of-type br {
+      display: none;
+    }
+  }
 }
