--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -1,4 +1,3 @@
-
 html {
   box-sizing: border-box;
 }
@@ -20,4 +19,11 @@ body {
 img {
   max-width: 100%;
   height: auto;
+}
+
+@media (min-width: $tablet-width) {
+  body {
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
