--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,4 +1,4 @@
-.main-nav__toggle {
+.header__toggle {
   width: 25px;
   height: 19px;
   border: none;
@@ -16,7 +16,7 @@
     width: 100%;
   }
 
-  .main-nav__toggle {
+  .header__toggle {
     display: none;
   }
 }
