--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,10 +1,9 @@
 .header {
-  /*временный отступ для меню*/
-  padding-bottom: 205px;
   border-bottom: 1px solid $border-color--light;
 }
 
-.header__wrapper {
+.header__inner {
+  @include container;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -23,13 +22,19 @@
 
 @media (min-width: $tablet-width) {
   .header {
-    /*временный отступ для меню*/
-    padding-bottom: 0;
     border: none;
   }
 
   .header__wrapper {
+    @include container--tablet;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     margin-top: 24px;
+  }
+
+  .header__inner {
+    @include container-reset;
   }
 
   .header__logo {
@@ -45,23 +50,27 @@
 
 @media (min-width: $desktop-width) {
   .header {
-    &--big-bg {
-      background-image: url("../img/index-background-mobile@1x.jpg"),
-        linear-gradient($background-color--green-image 50%);
+    &--big-bg::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 50%;
+      height: 696px;
+      background-color: #5eaa2f;
+      background-image: url("../img/index-background-desktop@1x.jpg");
       background-repeat: no-repeat;
-      background-position: center right;
-      background-size: 50%;
+      background-size: cover;
+      background-position: center;
+      z-index: -1;
     }
   }
 
   .header__wrapper {
+    @include container--desktop;
     align-items: flex-start;
     padding-top: 53px;
     margin-top: 0;
-
-    &--big-bg {
-      min-height: 696px;
-    }
   }
 
   .header__logo-image {
