--- a/source/sass/blocks/special.scss
+++ b/source/sass/blocks/special.scss
@@ -3,7 +3,10 @@
   padding-bottom: 35px;
 }
 
-.special__wrapper {
+.special__inner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding-top: 65px;
   padding-bottom: 43px;
   background-color: $background-color--green-image;
@@ -16,11 +19,13 @@
 .special__ico {
   width: 56px;
   height: 61px;
-  margin-bottom: 64px;
+  margin-bottom: 56px;
 }
 
 .special__text {
   max-width: 165px;
+  margin-top: 0;
+  margin-bottom: 0;
   font-size: 16px;
   line-height: 20px;
   text-align: center;
