--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -3,3 +3,35 @@
   padding: 0;
   list-style: none;
 }
+
+@mixin container {
+  max-width: 320px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
+@mixin container--tablet {
+  max-width: 768px;
+  padding-right: 30px;
+  padding-left: 30px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@mixin container--desktop {
+  max-width: 1300px;
+  padding-right: 40px;
+  padding-left: 40px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@mixin container-reset {
+  max-width: none;
+  padding-right: 0;
+  padding-left: 0;
+  margin-right: 0;
+  margin-left: 0;
+}
