fix lists selectors

--- a/source/sass/blocks/special.scss
+++ b/source/sass/blocks/special.scss
@@ -3,7 +3,7 @@
   padding-bottom: 35px;
 }
 
-.special__inner {
+.special__wrappe {
   display: flex;
   flex-direction: column;
   align-items: center;
