--- a/source/sass/blocks/about-feed.scss
+++ b/source/sass/blocks/about-feed.scss
@@ -13,9 +13,10 @@
 
 .about-feed__item {
   padding-left: 80px;
+  margin-top: 20px;
 
-  + .about-feed__item {
-    margin-top: 20px;
+  &:first-child {
+    margin-top: 0;
   }
 }
 
@@ -41,16 +42,13 @@
     min-height: 231px;
     padding-left: 0;
     margin-right: 147px;
-
-    + .about-feed__item {
-      margin-top: 0;
-    }
+    margin-top: 0;
 
     &:nth-of-type(2n) {
       margin-right: 0;
     }
 
-    &:nth-of-type(header__toggle+ 3) {
+    &:nth-of-type(n + 3) {
       margin-top: 87px;
     }
   }
@@ -79,11 +77,11 @@
       margin-right: 0;
     }
 
-    &:nth-of-type(header__toggle+ 3) {
+    &:nth-of-type(n + 3) {
       margin-top: 0;
     }
 
-    &:nth-of-type(header__toggle+ 5) {
+    &:nth-of-type(n + 5) {
       margin-top: 78px;
     }
   }
