--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -27,12 +27,16 @@
   .site-list {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
   }
 
   .site-list__item {
+    flex-grow: 1;
     border: none;
+    padding-top: 5px;
     padding-bottom: 10px;
-    margin-bottom: 14px;
+    margin-left: 5px;
+    margin-bottom: 5px;
     font-size: 18px;
     line-height: 25px;
     font-weight: 400;
@@ -55,6 +59,7 @@
   .site-list {
     justify-content: flex-end;
     background-color: transparent;
+    max-width: 590px;
 
     &--light .site-list__link {
       color: $text-color--dark-side;
@@ -66,10 +71,12 @@
   }
 
   .site-list__item {
+    flex-grow: 0;
     font-size: 20px;
+    margin-left: 30px;
 
-    + .site-list__item {
-      margin-left: 36px;
+    &:first-child {
+      margin-left: 0;
     }
   }
 }
