--- a/source/sass/blocks/сategories.scss
+++ b/source/sass/blocks/сategories.scss
@@ -11,7 +11,7 @@
   padding: 39px 30px 22px 20px;
   background-color: $background-color;
 
-  + .categories__item {
+  .categories__item {
     margin-top: 20px;
   }
 }
@@ -52,9 +52,10 @@
     padding-top: 81px;
     padding-bottom: 62px;
     padding-left: 52px;
+    margin-top: 30px;
 
-    + .categories__item {
-      margin-top: 30px;
+    &:first-child {
+      margin-top: 0;
     }
   }
 
@@ -97,10 +98,7 @@
     min-width: 570px;
     min-height: 372px;
     margin-right: 80px;
-
-    + .categories__item {
-      margin-top: 0;
-    }
+    margin-top: 0;
 
     &:nth-of-type(2n) {
       margin-right: 0;
