--- a/source/sass/blocks/аdditional-list.scss
+++ b/source/sass/blocks/аdditional-list.scss
@@ -5,9 +5,34 @@
 .аdditional-list__item {
   padding-top: 14px;
   padding-bottom: 17px;
-  border-top: 1px solid $border-color--dark;
+  border-top: 1px solid $border-color--silver;
 
   &:last-child {
-    border-bottom: 1px solid $border-color--dark;
+    border-bottom: 1px solid $border-color--silver;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .аdditional-list__item {
+    padding: 28px 38px;
+    border: 1px solid $border-color--silver;
+    border-bottom: none;
+
+    &:last-child {
+      border-bottom: 1px solid $border-color--silver;
+    }
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .аdditional-list__item {
+    padding: 16px 0 15px 0;
+    border-right: 0;
+    border-left: 0;
+    border-top: 1px solid $border-color--silver;
+
+    &:last-child {
+      border-bottom: 1px solid $border-color--silver;
+    }
   }
 }
