--- a/source/sass/vars.scss
+++ b/source/sass/vars.scss
@@ -8,16 +8,22 @@ $white: #ffffff;
 $gray--lighter: #f2f2f2;
 $gray--light: #ededed;
 $gray: #e6e6e6;
+$gray--middle: #eaeaea;
 $gray--dark: #cccccc;
 $gray--darken: #444444;
+$gray--decor: #dcdcdc;
+$gray--silver: #cdcdcd;
 $border-color--light: $gray--light;
 $border-color--lighter: $gray--lighter;
 $border-color: $gray;
 $border-color--dark: $gray--dark;
+$border-color--silver: $gray--silver;
 $text-color: $gray--darken;
 $text-color--light-side: $black;
 $text-color--dark-side: $white;
 $background-color: $gray--lighter;
+$background-color--middle: $gray--middle;
+$background-color--decor: $border-color--dark;
 $background-color--clean: $white;
 $background-color--green-image: $main-color;
 $decoration-color: $main-color;
