--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -57,7 +57,7 @@
 @media (min-width: $tablet-width) {
   .product {
     @include container-reset;
-    min-width: 320px;
+    min-width: 324px;
     width: 100%;
     min-height: 431px;
     padding-right: 37px;
@@ -124,6 +124,7 @@
 
 @media (min-width: $desktop-width) {
   .product {
-    min-width: 245px;
+    min-width: auto;
+    width: 245px;
   }
 }
