--- a/source/sass/blocks/result.scss
+++ b/source/sass/blocks/result.scss
@@ -4,6 +4,10 @@
   background-color: $background-color;
 }
 
+.result__wrapper {
+  @include container;
+}
+
 .result__title {
   margin-bottom: 33px;
 }
@@ -15,11 +19,20 @@
 
 .result__counter-list {
   @include reset-list;
+  display: flex;
+  justify-content: space-between;
   margin-bottom: 38px;
 }
 
+.result__counter-item {
+  position: relative;
+}
+
 .result__counter {
-  max-width: 124px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 124px;
   min-height: 56px;
   border: 1px solid $border-color--dark;
   margin-top: 0;
@@ -30,6 +43,9 @@
 }
 
 .result__border-text {
+  position: absolute;
+  bottom: -15px;
+  left: 50%;
   max-width: 87px;
   padding-right: 15px;
   padding-left: 15px;
@@ -37,6 +53,7 @@
   font-size: 12px;
   line-height: 12px;
   text-align: center;
+  transform: translateX(-50%);
 }
 
 .result__cost {
@@ -53,6 +70,11 @@
 .result__image {
   width: 311px;
   height: 232px;
+  display: none;
+
+  &--active {
+    display: block;
+  }
 }
 
 .result__btn {
@@ -63,10 +85,175 @@
   background-color: transparent;
 }
 
+.result__range-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .result__range-bar {
   width: 84px;
   height: 14px;
   border: 1px solid $border-color--dark;
   border-radius: 6px;
   background-color: $background-color--clean;
+  margin-right: 18px;
+  margin-left: 18px;
+}
+
+@media (min-width: $tablet-width) {
+  .result {
+    padding-top: 51px;
+    padding-bottom: 0;
+    background-color: $background-color--clean;
+  }
+
+  .result__wrapper {
+    @include container-reset;
+  }
+
+  .result__title {
+    @include container--tablet;
+    margin-bottom: 60px;
+  }
+
+  .result__text-wrapper {
+    @include container--tablet;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-bottom: 211px;
+  }
+
+  .result__text {
+    max-width: 100%;
+    margin-right: 10px;
+    margin-bottom: 56px;
+  }
+
+  .result__counter-list {
+    max-width: 366px;
+    width: 100%;
+  }
+
+  .result__counter {
+    width: 162px;
+    min-height: 72px;
+    font-size: 30px;
+    line-height: 37px;
+  }
+
+  .result__border-text {
+    min-width: fit-content;
+    padding-right: 8px;
+    padding-left: 8px;
+    bottom: -6px;
+    font-size: 14px;
+    line-height: 14px;
+    background-color: $background-color--clean;
+  }
+
+  .result__cost {
+    max-width: 175px;
+    font-size: 20px;
+    text-align: right;
+  }
+
+  .result__cat-inner {
+    @include container--tablet;
+  }
+
+  .result__cat-wrapper {
+    max-height: 462px;
+    padding-bottom: 75px;
+    background-image: linear-gradient(to right, $background-color 50%, $background-color--middle 50%);
+  }
+
+  .result__image-wrapper {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 21px;
+  }
+
+  .result__image {
+    width: 636px;
+    height: 517px;
+    margin-top: -169px;
+  }
+
+  .result__btn {
+    font-size: 20px;
+  }
+
+  .result__range-bar {
+    max-width: 428px;
+    width: 100%;
+    height: 6px;
+    border: none;
+    border-radius: 2.5px;
+    background-color: $background-color--decor;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .result {
+    padding-top: 45px;
+  }
+
+  .result__title {
+    @include container-reset;
+    @include container--desktop;
+    margin-bottom: 66px;
+  }
+
+  .result__content {
+    background-image: linear-gradient(to right, $background-color 80%, $background-color--middle 20%);
+  }
+
+  .result__content-wrapper {
+    @include container--desktop;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+
+  .result__text-wrapper {
+    @include container-reset;
+    display: block;
+    margin-bottom: 0;
+  }
+
+  .result__text {
+    max-width: 430px;
+    margin-top: 76px;
+  }
+
+  .result__counter-list {
+    margin-bottom: 62px;
+  }
+
+  .result__border-text {
+    background-color: $background-color;
+  }
+
+  .result__cost {
+    display: flex;
+    justify-content: space-between;
+    max-width: 330px;
+    text-align-last: left;
+  }
+
+  .result__cat-wrapper {
+    padding-top: 76px;
+    padding-bottom: 75px;
+  }
+
+  .result__cat-inner {
+    @include container-reset;
+  }
+
+  .result__image {
+    margin-top: -253px;
+  }
 }
