--- a/source/sass/blocks/аdditional-catalog.scss
+++ b/source/sass/blocks/аdditional-catalog.scss
@@ -8,4 +8,24 @@
   margin-bottom: 30px;
   font-size: 24px;
   line-height: 24px;
+  font-weight: 400;
+}
+
+@media (min-width: $tablet-width) {
+  .аdditional-catalog {
+    padding-top: 36px;
+    padding-bottom: 34px;
+  }
+
+  .аdditional-catalog__title {
+    margin-bottom: 75px;
+    font-size: 36px;
+    line-height: 36px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .аdditional-catalog {
+    padding: 0;
+  }
 }
