--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,6 +11,7 @@
 @import "blocks/header.scss";
 @import "blocks/main-nav.scss";
 @import "blocks/site-list.scss";
+@import "blocks/form-list.scss";
 @import "blocks/banner.scss";
 @import "blocks/сategories.scss";
 @import "blocks/about-feed.scss";
@@ -20,6 +21,7 @@
 @import "blocks/product-list.scss";
 @import "blocks/product.scss";
 @import "blocks/feed-stats.scss";
+@import "blocks/section-wrapper.scss";
 @import "blocks/аdditional-catalog.scss";
 @import "blocks/аdditional-list.scss";
 @import "blocks/аdditional-product.scss";
