--- a/source/sass/blocks/product-list.scss
+++ b/source/sass/blocks/product-list.scss
@@ -25,6 +25,10 @@
     margin-right: 60px;
     border: none;
 
+    &:last-child {
+      border-bottom: none;
+    }
+
     &:nth-of-type(2n) {
       margin-right: 0;
     }
